--- a/ProductMicroservice/src/main/resources/application.properties
+++ b/ProductMicroservice/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ProductMicroservice
-server.port=0   
+server.port=0
 
 spring.kafka.producer.bootstrap-servers=localhost:9092, localhost:9094
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serilization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serilization.StringSerializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
