--- a/ProductMicroservice/src/main/resources/application.properties
+++ b/ProductMicroservice/src/main/resources/application.properties
@@ -3,6 +3,9 @@ server.port=0
 spring.kafka.producer.bootstrap-servers=localhost:9094,localhost:9096
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.acks=all
+spring.kafka.producer.properties.retries=10
+spring.kafka.producer.properties.retry.backoff.ms=100
 
 logging.level.org.apache.kafka=DEBUG
 logging.level.org.springframework.kafka=DEBUG
