--- a/ProductMicroservice/src/main/resources/application.properties
+++ b/ProductMicroservice/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=0
 
-spring.kafka.producer.bootstrap-servers=localhost:9094,localhost:9096
+spring.kafka.producer.bootstrap-servers=[::1]:9094,[::1]:9096
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.properties.acks=all
